<resources>
    <!-- Generals strings -->
    <string name="app_name">TheEcoGame</string>
    <string name="app_logo_description">TheEcoGame logo</string>
    <string name="app_noImplemented">No implementado</string>
    <!-- Strings related to mainScreen -->
    <string name="button_play">Jugar</string>
    <string name="button_statistic">Estadísticas</string>
    <string name="button_setting">Ajustes</string>
    <!-- Strings related to activity_questions NAME REFACTOR -->
    <string name="back">Volver</string>
    <string name="question_challenge">Reto</string>
    <string name="question">Pregunta:</string>
    <string name="remaining_time">Tiempo restante:</string>
    <string name="ods" translatable="false">ODS</string>
    <string name="optionA" translatable="false">A) </string>
    <string name="optionB" translatable="false">B) </string>
    <string name="optionC" translatable="false">C) </string>
    <string name="optionD" translatable="false">D) </string>
    <string name="continue_next">Continuar</string>
    <!-- Strings related to activity_settings -->
    <string name="general_volume">Volumen general</string>
    <string name="music">Música</string>
    <string name="sounds">Sonidos</string>
    <string name="topic">Temática actual</string>
    <string name="save">Guardar</string>
    <string name="restore">Deshacer</string>

    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="consolidate_question">¿Quieres consolidar tus puntos?</string>
    <string name="consolidate_info">Solo puedes consolidar tus puntos 1 vez, si consolidas tus
        puntos al abandonar la partida conseguiras los puntos consolidados</string>
    <string name="warning">Aviso</string>

    <string name="statistics">Estadísticas</string>
    <string name="num_games_played">Partidas jugadas:</string>
    <string name="num_games_won">Partidas ganadas:</string>
    <string name="num_games_lost">Partidas perdidas:</string>
    <string name="num_abandoned_answers">Partidas abandonadas:</string>
    <string name="num_correct_questions">Preguntas acertadas:</string>
    <string name="num_wrong_questions">Preguntas incorrectas:</string>
    <string name="num_correct_hangman">Ahorcados acertadas:</string>
    <string name="num_wrong_hangman">Ahorcados incorrectas:</string>
    <string name="mean_time">Tiempo promedio en partida:</string>
    <string name="total_time">Tiempo total jugado:</string>
    <string name="ODS_knowledge">Nivel conocimiento de ODS:</string>
    <string name="left">Izquierda</string>
    <string name="right">Derecha</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicia sesión o Regístrate</string>
    <string name="action_sign_in_short">Inicia sesión</string>
    <string name="welcome">Bienvenido!</string>
    <string name="invalid_username">No es un usuario válido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">Inicio de sesión fallido</string>
    <string name="num_question" translatable="false">1</string>
    <string name="num_question_fixed" translatable="false">/10</string>
    <string name="image">Imagen</string>
    <string name="lost">GAME OVER</string>
    <string name="victory">VICTORIA</string>
    <string name="abandoned">ABANDONADA</string>
    <string name="timePlayed">Tiempo Jugado:</string>
    <string name="obtainedPoints">Puntos obtenidos:</string>
    <string name="answeredQuestions">Preguntas respondidas:</string>
    <string name="finishGame">Acabar partida</string>
    <string name="congratulations">¡¡Felicidades!!</string>
    <string name="abandon">Abandonar</string>
    <string name="abandon_question">¿Desear abandonar la partida?</string>
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="profile">Perfil</string>

    <string name="points">Puntos:</string>
    <string name="alert_points">Puntos:</string>
    <string name="total_points">Puntos Totales:</string>
    <string name="consolidate_points">Puntos Consolidados:</string>
    <string name="mute">Mute</string>
    <string name="question_logut">Quieres cerrar sesión?</string>

    <string name="edit_profile">Editar Perfil</string>
    <string name="edit_image">Cambiar Imagen</string>
    <string name="username_profile">Nombre de usuario</string>
    <string name="email_profile">Correo</string>
    <string name="password_profile">Contraseña</string>
    <string name="save_profile">Guardar</string>

    <string name="background_hangman">Fondo</string>
    <string name="head_hangman">Cabeza</string>
    <string name="body_hangman">Cuerpo</string>
    <string name="right_arm_hangman">Brazo derecho</string>
    <string name="left_arm_hangman">Brazo izquierdo</string>
    <string name="right_leg_hangman">Pierna derecha</string>
    <string name="left_leg_hangman">Pierna izquierda</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>

    <string name="scroll_view">Scroll View</string>
    <string name="level_ods">Nivel De ODS</string>

    <string name="ODS_knowledge_1">ODS 1:                            </string>
    <string name="ODS_knowledge_2">ODS 2:                            </string>
    <string name="ODS_knowledge_3">ODS 3:                            </string>
    <string name="ODS_knowledge_4">ODS 4:                            </string>
    <string name="ODS_knowledge_5">ODS 5:                            </string>
    <string name="ODS_knowledge_6">ODS 6:                            </string>
    <string name="ODS_knowledge_7">ODS 7:                            </string>
    <string name="ODS_knowledge_8">ODS 8:                            </string>
    <string name="ODS_knowledge_9">ODS 9:                            </string>
    <string name="ODS_knowledge_10">ODS 10:                            </string>
    <string name="ODS_knowledge_11">ODS 11:                            </string>
    <string name="ODS_knowledge_12">ODS 12:                            </string>
    <string name="ODS_knowledge_13">ODS 13:                            </string>
    <string name="ODS_knowledge_14">ODS 14:                            </string>
    <string name="ODS_knowledge_15">ODS 15:                            </string>
    <string name="ODS_knowledge_16">ODS 16:                            </string>
    <string name="ODS_knowledge_17">ODS 17:                            </string>

    <string name="clues">Pistas</string>
    <string name="clues_description">Puedes comprar una pista para el reto, la pista es un
        descripción, al usarla haces que el valor de la pregunta sea la mitad </string>
    <string name="challenges_answered_correctly">Retos completados:</string>

    <!-- AlertDialog messages -->
    <string name="alert_title_quit">¿Deseas abandonar?</string>
    <string name="alert_msg_quit">Recuerda que si no has consolidado, obtendras 0 puntos</string>
    <string name="alert_confirm">Aceptar</string>
    <string name="alert_cancel">Cancelar</string>

    <!-- Toasts messages -->
    <string name="msg_consolidated">Para abandonar la partida necesitas primero consolidar</string>
    <string name="msg_empty_answer">Debes seleccionar una respuesta</string>
    <string name="msg_second_chance">Respuesta incorrecta. Tienes otra oportunidad.</string>
    <string name="msg_incorrect_answer">Respuesta incorrecta. No tienes más oportunidades.</string>

    <!-- Error messages -->
    <string name="error_msg">Ha ocurrido un error inesperado</string>
    <string name="error_msg_internet">Error de conexión. Verifique su conexión de internet</string>
    <string name="error_msg_emailOrPassword">Email o Contraseña incorrecta</string>

    <!--For the spinner at SettingActivity-->
    <string-array name="Topics">
        <item>ODS</item>
    </string-array>

    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>


    <!--For User Management-->
    <string name="log_in">Iniciar Sesión</string>
    <string name="register">Registrarse</string>

    <!-- Register Fragment -->
    <string name="username">Nombre de usuario</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="username_hint">Introduzca su nombre de usuario</string>
    <string name="email_hint">Introduzca su correo</string>
    <string name="password_hint">Introduzca su contraseña</string>
    <string name="create_user">Crear usuario</string>
    <string name="error">error</string>

    <!-- Error messages related to user restrictions -->
    <string name="username_format_error">Introduzca menos de 20 caracteres</string>
    <string name="username_found_error">Ya existe, pruebe con otro</string>
    <string name="username_db_error">Usuario no disponible</string>
    <string name="email_format_error">Formato de correo no válido</string>
    <string name="email_db_error">Email no disponible</string>
    <string name="password_length_error">Debe contener al menos 8 caracteres</string>
    <string name="password_lowercase_error">Debe contener al menos una minúscula</string>
    <string name="password_uppercase_error">Debe contener al menos una mayúscula</string>
    <string name="password_number_error">Debe contener al menos un número</string>
    <string name="num_correct_answers">Respuestas correctas:</string>
    <string name="num_wrong_answers">Respuestas incorrectas:</string>

    <!--Ranking Activity-->
    <string name="ranking" translatable="false">Ranking</string>
    <string name="top10" translatable="false">Top 10</string>


    <string name="question_quit">¿Deseas salir del reto?</string>
</resources>