<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.game.view.QuestionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_green">

        <TextView
            android:id="@+id/tvQuestionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/num_question"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="22dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="45dp"
            android:text="@string/remaining_time"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="110sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_shape_round"
            android:gravity="center"
            android:text="@string/question"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivODS2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivODS3"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/ivODS"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/ivODS3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toStartOf="@+id/ivODS3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
            app:layout_constraintVertical_bias="0.491"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="320dp"
            android:layout_height="293dp"
            app:layout_constraintBottom_toTopOf="@+id/btnContinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivODS3"
            tools:ignore="TextSizeCheck">

            <RadioButton
                android:id="@+id/rbOptionA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_shape_round"
                android:minHeight="48dp"
                android:text="@string/optionA"
                android:textColor="@color/black"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/rbOptionB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_shape_round"
                android:minHeight="48dp"
                android:text="@string/optionB"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rbOptionC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_shape_round"
                android:minHeight="48dp"
                android:text="@string/optionC"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rbOptionD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape_round"
                android:minHeight="48dp"
                android:text="@string/optionD"
                android:textColor="@color/black" />
        </RadioGroup>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape_round"
            android:backgroundTint="@color/background_white_green"
            android:text="@string/continue_next"
            android:textColor="@color/black"
            app:cornerRadius="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>